--- a/app/src/main/res/layout/fragment_default.xml
+++ b/app/src/main/res/layout/fragment_default.xml
@@ -21,9 +21,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:text="작업중"
+        android:text="@string/message_search_github_repository"
         android:textSize="20sp"
         android:textStyle="bold"
         android:visibility="gone"
+        tools:visibility="visible" />
+
+    <View
+        android:id="@+id/view_progress"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#66000000"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/view_progress"
+        app:layout_constraintEnd_toEndOf="@+id/view_progress"
+        app:layout_constraintStart_toStartOf="@+id/view_progress"
+        app:layout_constraintTop_toTopOf="@+id/view_progress" />
+
+    <android.support.constraint.Group
+        android:id="@+id/group_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:constraint_referenced_ids="view_progress, progress_bar"
         tools:visibility="visible" />
 </android.support.constraint.ConstraintLayout>
